--- a/portal/templates/gil/what-is-prostate-cancer.html
+++ b/portal/templates/gil/what-is-prostate-cancer.html
@@ -6,7 +6,7 @@
       {{ super() }}
       <div class="page-intro page-intro--dark page-intro--top-img page-intro--prostate-facts" style="background-image: url({{url_for('static', filename='img/PCF2-Background.jpg') }})">
         <div class="page-intro__content">
-          <h1 class="page-intro__main">{% trans %}<span>What is<span> <span class="page-intro__main--accent">Prostate Cancer</span><span>?</span>{% endtrans %}</h1>
+          <h1 class="page-intro__main">{% trans %}What is <span class="page-intro__main--accent">Prostate Cancer</span>?{% endtrans %}</h1>
           <p class="page-intro__sub">{{_("Cancer is a disease in which cells in the body grow out of control. Prostate Cancer is when cancer starts in the prostate. Many men with prostate cancer die of other causes without ever having any symptoms from the cancer.")}}</p>
           <div class="button-callout button-callout--has-text"><strong class="js-scroll-down" data-target=".page-intro">{{_("Learn More")}}</strong>
             <figure class="button-callout__scroll js-scroll-down" data-target=".page-intro"></figure>
@@ -43,7 +43,7 @@
       <div class="module-wrap module-wrap--theme-brown">
         <div class="module">
           <div class="accent-heading accent-heading--no-border">{{_("Education")}}</div>
-          <p class="module__heading">{% trans %}<span>What is the </span><span class="module__heading--accent">Prostate</span><span>?</span>{% endtrans %}</p>
+          <p class="module__heading">{% trans %}What is the <span class="module__heading--accent">Prostate</span>?{% endtrans %}</p>
           <p class="module__body module__body--left">{{_("The prostate is a part of the male reproductive system and is located just below the bladder and in front of the rectum. It produces fluid that makes up a part of semen.")}}</p>
           <div class="module__img"><img src="{{url_for('static', filename='img/what-is-the-prostate-graphic.png')}}" alt="{{_('Prostate Cancer Graph')}}"></div>
         </div>
@@ -74,7 +74,7 @@
       </div>
       <div class="module-wrap module-wrap--theme-brown module-wrap--has-border">
         <div class="module">
-          <p class="module__heading">{% trans %}<span>What are the </span><span class="module__heading--accent">Symptoms</span> <span>of</span><br/> <span>Prostate Cancer?</span>{% endtrans %}</p>
+          <p class="module__heading">{% trans %}What are the <span class="module__heading--accent">Symptoms</span> of <br/> Prostate Cancer?{% endtrans %}</p>
           <p class="module__body module__body--left">{{_("Most men will not experience any symptoms, especially when the prostate cancer is caught at early stages. Some men do have symptoms for prostate cancer which might include:")}}</p>
           <div class="mini-boxes mini-boxes--theme-gray mini-boxes--full-width">
             <div class="mini-boxes__item mini-boxes__item-col">
@@ -95,7 +95,7 @@
       </div>
       <div class="module-wrap module-wrap--theme-brown module-wrap--has-border">
         <div class="module">
-          <p class="module__heading">{% trans %}<span>What</span> <span class="module__heading--accent">Screening Tests</span> <span>Are There for</span> <br/><span>Prostate Cancer?</span>{% endtrans %}</p>
+          <p class="module__heading">{% trans %}What <span class="module__heading--accent">Screening Tests</span> Are There for <br/>Prostate Cancer?{% endtrans %}</p>
           <p class="module__body module__body--left">{{_("Cancer screening means looking for cancer before it causes symptoms. However, most prostate cancers grow slowly or not at all. ")}}</p>
           <p class="module__body module__body--left">{{_("Two tests are commonly used to screen for prostate cancer: ")}}</p>
           <div class="mini-boxes mini-boxes--theme-gray mini-boxes--full-width">
@@ -120,7 +120,7 @@
       <div class="module-wrap module-wrap--theme-olive">
         <div class="module">
           <div class="accent-heading accent-heading--no-border">{{_("Diagnosis")}}</div>
-          <p class="module__heading">{% trans%}<span>How Is Prostate Cancer</span> <span class="module__heading--accent">Diagnosed</span><span>?</span>{% endtrans %}</p>
+          <p class="module__heading">{% trans%}How Is Prostate Cancer <span class="module__heading--accent">Diagnosed</span>?{% endtrans %}</p>
           <p class="module__body module__body--left">{{_("If your prostate specific antigen (PSA) test or digital rectal exam (DRE) is abnormal, doctors may do more tests to find or diagnose prostate cancer. A biopsy is the main tool for diagnosing prostate cancer. A biopsy is when a small piece of tissue is removed from the prostate and looked at under a microscope to see if there are cancer cells.")}}</p>
           <div class="mini-boxes mini-boxes--theme-gray mini-boxes--full-width">
             <div class="mini-boxes__item mini-boxes__item-col">
@@ -148,7 +148,7 @@
       <div class="module-wrap module-wrap--theme-blue">
         <div class="module">
           <div class="accent-heading accent-heading--no-border">{{_("Treatment")}}</div>
-          <p class="module__heading">{% trans %}<span>How Is Prostate Cancer </span> <span class="module__heading--accent">Treated</span><span>?</span>{%endtrans%}</p>
+          <p class="module__heading">{% trans %}How Is Prostate Cancer <span class="module__heading--accent">Treated</span>?{%endtrans%}</p>
           <p class="module__body module__body--left">{{_("Men have different stages of prostate cancer and have different treatment options available to them:")}}</p>
           <div class="mini-boxes mini-boxes--theme-blue mini-boxes--half-width">
             <div class="mini-boxes__item">
