remove missed extra span elements

--- a/portal/templates/gil/what-is-prostate-cancer.html
+++ b/portal/templates/gil/what-is-prostate-cancer.html
@@ -50,7 +50,7 @@
       </div>
       <div class="module-wrap module-wrap--theme-brown module-wrap--has-border">
         <div class="module">
-          <p class="module__heading">{% trans %}<span>What are the</span> <span class="module__heading--accent">Risk Factors</span> <span>for<br/> <span>Prostate Cancer?</span>{% endtrans %}</p>
+          <p class="module__heading">{% trans %}What are the <span class="module__heading--accent">Risk Factors</span> for<br/> Prostate Cancer?{% endtrans %}</p>
           <p class="module__body module__body--left">{{_("There are some risk factors that increase your chances of getting prostate cancer:")}}</p>
           <div class="mini-boxes mini-boxes--theme-gray mini-boxes--half-width">
             <div class="mini-boxes__item mini-boxes__item-col">
