--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -183,6 +183,11 @@ a.btn {
     margin: 0 0.5em;
     display: inline-block !important;
   }
+  .truenth-consent-status-header,
+  .truenth-consent-date-header,
+  .truenth-tou-table-text {
+    display: none;
+  }
 }
 #consentListLoad {
   margin-top: 1em;
