add missing bracket in portal.less

--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -173,7 +173,7 @@ a.btn {
   .button--LR {
     margin: 0 0.5em;
     display: inline-block;
-
+  }
 }
 .button--LR.data-show,
 #profileConsentList .button--LR[data-show = 'true'] {
