--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -503,7 +503,7 @@ h4.detail-title {
   }
   input[type='text'],
   select {
-    height: 42px;
+    height: 2.4em;
   }
   .prompt {
     color: #333;
@@ -2038,6 +2038,7 @@ div.noOrg-container {
   min-height: 4.5em;
 }
 #biopsyDateContainer label {
+  font-size: 1em !important;
   margin-right: 0.2em;
 }
 div.biopsy-option:last-of-type{
