--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -716,6 +716,9 @@ h4.detail-title {
     letter-spacing: 2px;
     margin: 0 0.2em;
   }
+  .eproms-id-label {
+    display: none
+  }
 }
 #adminTableToolbar {
   div.orglist-selector {
