--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -93,7 +93,8 @@
           <thead>
               <tr>
                   <th data-field="id" data-visible="false" data-card-visible="false" data-sortable="false" data-class="tnth-hide">
-                  <th data-field="userid"  data-sortable="true" data-sorter="tnthTables.stripLinksSorter" data-class="id-field">{{ _("ID") }}</th>
+                  <!-- NOTE TrueNTH has requested its unique ID label, therefore use CSS class to hide/show label appropriately here, please see portal.css and eproms.css for details -->
+                  <th data-field="userid"  data-sortable="true" data-sorter="tnthTables.stripLinksSorter" data-class="id-field"><span class="truenth-id-label">{{_("TrueNTH ID")}}</span><span class="eproms-id-label">{{ _("ID") }}</span></th>
                   <th data-field="username" data-sortable="true" data-visible="false">{{ _("Username") }}</th>
                   <th data-field="firstname" data-sortable="true" data-class="firstname-field">{{ _("First Name") }}</th>
                   <th data-field="lastname" data-sortable="true" data-class="lastname-field">{{ _("Last Name") }}</th>
