--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -715,6 +715,9 @@ div.right-panel {
 #adminTable div.card-view {
   display: flex;
 }
+#adminTable .truenth-id-label {
+  display: none;
+}
 #adminTableToolbar div.orglist-selector {
   display: inline-block;
 }
