--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -782,6 +782,9 @@ div.right-panel {
     letter-spacing: 0.1px;
     border-bottom: 1px solid #dad8d8;
   }
+  .truenth-id-label {
+    display: none;
+  }
 }
 #adminTableToolbar {
   div.orglist-selector {
