--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -277,6 +277,20 @@ select:not([multiple]) {
     margin: 1em 4em;
     border-top: 1px solid #ddd;
   }
+  #site_id_view {
+    margin-top: 0.2em;
+    margin-bottom: 0.2em;
+  }
+  .site-id-view td {
+    margin-top: 0.4em;
+  }
+  #profileSiteIDContainer {
+    margin-bottom: 1.8em;
+  }
+}
+#profileSiteId {
+  width: 300px;
+  max-width: 100%;
 }
 @media (max-width: 1199px) {
   #mainDiv.profile .footer-container.flex{
@@ -399,7 +413,7 @@ h4.detail-title {
   margin: 3em auto;
   min-height: 50vh;
 }
-#topTerms .custom-tou, 
+#topTerms .custom-tou,
 #topTerms .custom-tou-text {
   display: none;
 }
