remove in-line styling and replace with css class

--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -732,6 +732,9 @@ h4.detail-title {
   background-color: #ececea;
   color: #606a73;
 }
+#userStatsContainer .indent {
+  padding: 0 2em !important;
+}
 #loginEmailReminderText {
   margin-left: 8px;
   font-size: 0.87em;
