--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -775,6 +775,9 @@ h4.detail-title {
     }
   }
 }
+#userStatsContainer .indent {
+  padding: 0 2em !important;
+}
 #loginEmailReminderText
 {
   margin-left: 8px;
